--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=usuarios
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/usuarios
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=trainibit
 spring.jpa.show-sql=true
